# zkp-learning

./: README.md
mpt/: Cargo.toml
mpt/src/: main.rs
ntt/: go.mod  ntt.go  ntt4step.go  ntt_test.go
