[package]
name = "mpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-db = "0.15.2"
keccak-hasher = "0.15.3"
memory-db = "0.31.0"
reference-trie = "0.26.0"
trie-db="0.24.0"
trie-db-test = "0.26.0"
